# AgenticSqlConverter

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docs/: architecture.md  open_source_boundary.md  project_origin_and_scope.md  sample_output.md  validation_flow.md
examples/: simple_orders.sql
examples/migration_case/: expected_analysis_report.json  expected_dependency_graph.json  legacy_postgres_query.sql  run_demo.sh  validation_report.md
src/agentic_sql_converter/: __init__.py
src/agentic_sql_converter/cli/: __init__.py  main.py
src/agentic_sql_converter/graph/: __init__.py  dependencies.py
src/agentic_sql_converter/mcp_server/: __init__.py
src/agentic_sql_converter/parsing/: __init__.py  ctes.py  parse.py
src/agentic_sql_converter/report/: __init__.py  analysis.py
src/agentic_sql_converter/rewrite/: __init__.py  pass_base.py  registry.py
src/agentic_sql_converter/rewrite/passes/: __init__.py  formatting.py
src/agentic_sql_converter/validate/: __init__.py  parse_only.py  risk_classifier.py
tests/: test_analysis_report.py  test_cli.py  test_dependency_graph.py  test_extract_ctes.py  test_formatting_pass.py  test_parse_only_validation.py  test_parse_sql.py  test_rewrite_registry.py  test_risk_classifier.py
